<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/one2"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="28dp"
        android:text="@string/point"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/one3" />

    <Button
        android:id="@+id/one3"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/equal"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/one10" />

    <Button
        android:id="@+id/one4"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:text="@string/one"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one"
        app:layout_constraintEnd_toStartOf="@+id/one5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/one5"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/two"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one2"
        app:layout_constraintEnd_toStartOf="@+id/one6" />

    <Button
        android:id="@+id/one6"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/three"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one3"
        app:layout_constraintEnd_toStartOf="@+id/one11" />

    <Button
        android:id="@+id/one7"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:text="@string/four"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one4"
        app:layout_constraintEnd_toStartOf="@+id/one8"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/one8"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/five"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one5"
        app:layout_constraintEnd_toStartOf="@+id/one9" />

    <Button
        android:id="@+id/one9"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/six"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one6"
        app:layout_constraintEnd_toStartOf="@+id/one12" />

    <Button
        android:id="@+id/one10"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="28dp"
        android:text="@string/plus"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/one11"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/minus"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one10"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/one12"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/multiplication"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one11"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/one13"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginBottom="16dp"
        android:text="@string/seven"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one7"
        app:layout_constraintEnd_toStartOf="@+id/one14"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/one14"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:text="@string/eight"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one8"
        app:layout_constraintEnd_toStartOf="@+id/one15" />

    <Button
        android:id="@+id/one15"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/nine"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one9"
        app:layout_constraintEnd_toStartOf="@+id/one16" />

    <Button
        android:id="@+id/one16"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="16dp"
        android:text="@string/division"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/one12"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/one"
        android:layout_width="70dp"
        android:layout_height="71dp"
        android:layout_marginBottom="28dp"
        android:text="@string/zero"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/one2"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="340dp"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:text="0"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="326dp"
        android:layout_height="76dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:text="@string/calculator"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>